[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tool-leash"
version = "0.2.0"
description = "Stateful Execution Budgets and HITL constraints for Agent Tools"
authors = [{name = "Antigravity", email = "antigravity@example.com"}]
dependencies = [
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pre-commit>=3.0",
    "ruff>=0.9",
    "mypy>=1.14",
    "bandit>=1.8",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
tool_leash = ["py.typed"]

# --- Ruff: lint + format ---
[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print
]
ignore = [
    "S101",  # use of assert (fine in tests)
    "S603",  # subprocess call
    "B008",  # function call in default arg
    "E501",  # line too long
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S",    # all bandit/security rules — test files have intentional bad patterns
    "T20",  # print statements are fine in tests
]

# --- Bandit: security linting ---
[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101"]  # assert statements — fine in library code

# --- Mypy ---
[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
files = ["tool_leash/"]

# --- pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
