[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tool-leash"
version = "0.2.0"
description = "Stateful execution budgets and call-guard policies for AI agent tools"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Jesse Castro & Raven", email = "jesse@ravenagent.dev"}]
dependencies = []
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/rai-agentic-toolkit/tool-leash"
Repository = "https://github.com/rai-agentic-toolkit/tool-leash"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pre-commit>=3.0",
    "ruff>=0.9",
    "mypy>=1.14",
    "bandit>=1.8",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
tool_leash = ["py.typed"]

# --- Ruff: lint + format ---
[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print
]
ignore = [
    "S101",  # use of assert (fine in tests)
    "S603",  # subprocess call
    "B008",  # function call in default arg
    "E501",  # line too long
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S",    # all bandit/security rules — test files have intentional bad patterns
    "T20",  # print statements are fine in tests
]

# --- Bandit: security linting ---
[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101"]  # assert statements — fine in library code

# --- Mypy ---
[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
files = ["tool_leash/"]

# --- pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
